--- a/FrameworkExampleEventSQL/EventTestClasses/EventTestClasses.csproj
+++ b/FrameworkExampleEventSQL/EventTestClasses/EventTestClasses.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml.Serialization" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CustomerPropsTests.cs" />
     <Compile Include="EventTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
