CustomerSQLDB class and tests begun

--- a/FrameworkExampleEventSQL/EventTestClasses/EventTestClasses.csproj
+++ b/FrameworkExampleEventSQL/EventTestClasses/EventTestClasses.csproj
@@ -47,7 +47,9 @@
     <Reference Include="System.Xml.Serialization" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CustomerDBTests.cs" />
     <Compile Include="CustomerPropsTests.cs" />
+    <Compile Include="CustomerSQLDBTests.cs" />
     <Compile Include="EventTests.cs" />
     <Compile Include="ProductPropsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
