--- a/FrameworkExampleEventSQL/EventDB/EventDBClasses.csproj
+++ b/FrameworkExampleEventSQL/EventDB/EventDBClasses.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CustomerSQLDB.cs" />
     <Compile Include="EventSQLDB.cs" />
     <Compile Include="EventTextDB.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
