CustomerDBTests completed, began work with Business classes

--- a/FrameworkExampleEventSQL/EventClasses/EventClasses.csproj
+++ b/FrameworkExampleEventSQL/EventClasses/EventClasses.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppUser.cs" />
+    <Compile Include="Customer.cs" />
     <Compile Include="Event.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
