--- a/FrameworkExampleEventSQL/EventClasses/EventClasses.csproj
+++ b/FrameworkExampleEventSQL/EventClasses/EventClasses.csproj
@@ -42,6 +42,7 @@
     <Compile Include="AppUser.cs" />
     <Compile Include="Customer.cs" />
     <Compile Include="Event.cs" />
+    <Compile Include="Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
