just need product class tests and diagram

--- a/FrameworkExampleEventSQL/EventClasses/EventClasses.csproj
+++ b/FrameworkExampleEventSQL/EventClasses/EventClasses.csproj
@@ -60,6 +60,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Customer.cd" />
     <None Include="Event.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
